# index.js
@@ -14,6 +14,7 @@ app.post("/api/v1/login", controllers.login);
 app.post("/api/v1/register", controllers.register);
 app.post("/api/v1/usersimageupload", controllers.authenticator, controllers.imageUpload.users, controllers.usersImagePost);
 app.put("/api/v1/profil", controllers.authenticator, controllers.profil);
+app.get("/api/v1/currentuser", controllers.authenticator, controllers.currentUser);
 app.get("/api/v1/products/sold",controllers.authenticator,controllers.soldProduct);
 app.get("/api/v1/products/sale",controllers.authenticator, controllers.saleProduct);
 app.get("/api/v1/products/bid", controllers.authenticator, controllers.bidProduct);
